// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parser > should parse endpoint 1`] = `
{
  "baseUrl": "https://api.themoviedb.org/3",
  "body": "{\\"foo\\":\\"bar\\"}",
  "headers": {
    "accept": "application/json",
    "authorization": "Bearer xxx",
    "content-type": "application/json",
  },
  "method": "POST",
  "url": "/foo/baz",
}
`;

exports[`parser > should parse route 1`] = `
{
  "baseUrl": "https://api.themoviedb.org/3",
  "body": null,
  "headers": {
    "accept": "application/json",
    "authorization": "Bearer xxx",
  },
  "method": "GET",
  "url": "/foo/baz",
}
`;
